<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_add"
        android:orderInCategory="1"
        android:title="@string/add_toolbar_button"
        android:icon="@drawable/ic_note_add_black_24dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_save"
        android:orderInCategory="2"
        android:title="@string/save_toolbar_button"
        android:icon="@drawable/ic_save_black_24dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_open"
        android:orderInCategory="3"
        android:title="@string/open_toolbar_button"
        android:icon="@drawable/ic_folder_open_black_24dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_sort"
        android:title="@string/sort_toolbar_button"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_mode"
        android:title="@string/mode_toolbar_button"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_stat"
        android:title="@string/stat_toolbar_button"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear_all"
        android:title="@string/clear_all_toolbar_button"
        app:showAsAction="never" />

</menu>